# RM56

./: .gitignore  .gn  Makefile  build.py  build.sh  readme.md
base/hiviewdfx/hievent_lite/: BUILD.gn  README.md  README_zh.md  bundle.json
base/hiviewdfx/hievent_lite/command/: BUILD.gn  hievent_lite_command.c  hievent_lite_command.h
base/hiviewdfx/hievent_lite/frameworks/: hiview_event.c  hiview_output_event.c  hiview_output_event.h
base/hiviewdfx/hiview/: BUILD.gn  CMakeLists.txt  OAT.xml  README.md  README_zh.md  bundle.json  hisysevent.yaml  hiview.gni  hiview_zh.md  kernel_vendor.yaml  main.cpp
base/hiviewdfx/hiview/adapter/: BUILD.gn  CMakeLists.txt
base/hiviewdfx/hiview/base/: BUILD.gn  CMakeLists.txt  audit.cpp  audit_log_parser.cpp  default_logger.cpp  event.cpp  event_dispatch_queue.cpp  event_dispatcher.cpp  event_loop.cpp  event_source.cpp  hi_logger.cpp  hiview_global.cpp  logger.cpp  pipeline.cpp  plugin.cpp  plugin_factory.cpp  plugin_proxy.cpp  sys_event.cpp
base/hiviewdfx/hiview/core/: BUILD.gn  CMakeLists.txt  device_node.h  event_server.cpp  event_server.h  hiview_platform.cpp  hiview_platform.h  plugin_bundle.cpp  plugin_bundle.h  plugin_config.cpp  sysevent_source.cpp  sysevent_source.h
base/hiviewdfx/hiview/include/: engine_event_dispatcher.h  feature.h  plugin_extra_info.h  public_defines.h
base/hiviewdfx/hiview/plugins/: BUILD.gn
base/hiviewdfx/hiview/service/: BUILD.gn  hiview_service.cpp  hiview_service.h
base/hiviewdfx/hiview/test/: BUILD.gn
base/hiviewdfx/hiview_lite/: BUILD.gn  README.md  README_zh.md  bundle.json  hiview_cache.c  hiview_cache.h  hiview_config.c  hiview_config.h  hiview_def.h  hiview_file.c  hiview_file.h  hiview_service.c  hiview_service.h  hiview_util.c  hiview_util.h
base/powermgr/battery_lite/: BUILD.gn  README.md  README_zh.md  batterymgr.gni  bundle.json  config.gni
base/powermgr/battery_lite/frameworks/: BUILD.gn
base/powermgr/battery_lite/services/: BUILD.gn
base/powermgr/battery_lite/test/: battery_test.js
base/powermgr/powermgr_lite/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  config.gni  powermgr.gni
base/powermgr/powermgr_lite/frameworks/: BUILD.gn
base/powermgr/powermgr_lite/services/: BUILD.gn
base/powermgr/powermgr_lite/utils/: BUILD.gn
base/security/appverify/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json
base/security/deviceauth/: BUILD.gn  README.md  README_zh.md  bundle.json  deviceauth_env.gni
base/security/deviceauth/deps_adapter/: BUILD.gn  deviceauth_hals.gni
base/security/deviceauth/services/: BUILD.gn  device_auth.c  deviceauth.gni
base/security/huks/: BUILD.gn  README.md  README_zh.md  bundle.json  huks.gni
base/security/huks/test/: BUILD.gn
base/security/huks/unittest/: BUILD.gn
developtools/packing_tool/: BUILD.gn  OAT.xml  README_zh.md
developtools/packing_tool/adapter/: LICENSE
developtools/packing_tool/adapter/ohos/: AbilityFormInfo.java  AbilityInfo.java  ApiVersion.java  AppInfo.java  BinaryTool.java  BundleException.java  CollectBinInfo.java  CommandParser.java  CommonEvent.java  CompressEntrance.java  CompressVerify.java  (+38 more)
developtools/packing_tool/configcheck/: BUILD.gn  configSchema_lite.json  configSchema_rich.json
developtools/packing_tool/jar/: BUILD.gn
developtools/packing_tool/modulecheck/: BUILD.gn  app.json  commonEvents.json  distroFilter.json  forms.json  module.json  pages.json  shortcuts.json
drivers/adapter/: BUILD.gn  LICENSE  OAT.xml  README.md  README_zh.md  bundle.json
drivers/adapter/platform/: BUILD.gn
drivers/adapter/uhdf/: README.md  README_zh.md  uhdf.gni
drivers/adapter/uhdf2/: README.md  README_zh.md  hdi.gni  uhdf.gni
drivers/peripheral/audio/: BUILD.gn  README.md  README_zh.md  audio.gni  bundle.json
drivers/peripheral/codec/: BUILD.gn  README.md  README_zh.md  bundle.json
drivers/peripheral/sensor/: BUILD.gn  README.md  README_zh.md  bundle.json
foundation/ace/ace_engine/: BUILD.gn  OAT.xml  README.md  README_zh.md  ace_config.gni  如何新增一个组件.md
foundation/ace/ace_engine_lite/: .clang-format  README.md  README_zh.md  ace_lite.gni  bundle.json
foundation/appexecfwk/standard/: BUILD.gn  OAT.xml  README_zh.md  appexecfwk.gni  bundle.json  hisysevent.yaml
foundation/communication/ipc_lite/: BUILD.gn  README.md  README_zh.md
foundation/distributedschedule/samgr_lite/: BUILD.gn  README.md  README_zh.md  bundle.json  config.gni
gui/lvgl/: BUILD.gn  Makefile
gui/lvgl/demos/: Makefile
gui/lvgl/examples/: Makefile
gui/lvgl/src/: Makefile
interface/sdk-js/: BUILD.gn  OAT.xml  README_en.md  README_zh.md  interface_config.gni  remove_internal.py  remove_internal.pydeps
interface/sdk-js/api/: @ohos.WorkSchedulerExtensionAbility.d.ts  @ohos.ability.dataUriUtils.d.ts  @ohos.ability.errorCode.d.ts  @ohos.ability.featureAbility.d.ts  @ohos.ability.particleAbility.d.ts  @ohos.ability.wantConstant.d.ts  @ohos.abilityAccessCtrl.d.ts  @ohos.accessibility.d.ts  @ohos.account.appAccount.d.ts  @ohos.account.distributedAccount.d.ts  @ohos.account.osAccount.d.ts  @ohos.animator.d.ts  @ohos.application.Ability.d.ts  @ohos.application.AbilityConstant.d.ts  @ohos.application.AbilityStage.d.ts  @ohos.application.Configuration.d.ts  @ohos.application.ConfigurationConstant.d.ts  @ohos.application.DataShareExtensionAbility.d.ts  @ohos.application.FormExtension.d.ts  @ohos.application.ServiceExtensionAbility.d.ts  @ohos.application.StartOptions.d.ts  @ohos.application.StaticSubscriberExtensionAbility.d.ts  @ohos.application.Want.d.ts  @ohos.application.abilityDelegatorRegistry.d.ts  @ohos.application.abilityManager.d.ts  @ohos.application.appManager.d.ts  @ohos.application.formBindingData.d.ts  @ohos.application.formError.d.ts  @ohos.application.formHost.d.ts  @ohos.application.formInfo.d.ts  @ohos.application.formProvider.d.ts  @ohos.application.missionManager.d.ts  @ohos.application.testRunner.d.ts  @ohos.application.uriPermissionManager.d.ts  @ohos.backgroundTaskManager.d.ts  @ohos.batteryInfo.d.ts  @ohos.batteryStatistics.d.ts  @ohos.bluetooth.d.ts  @ohos.brightness.d.ts  @ohos.bundle.d.ts  (+141 more)
(+23672 files in other folders)
