# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
#import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")
#import("components.gni")



static_library("ui_lvgl") {
  sources = [
    "lv_app.c",  
    "porting/display/lv_port_disp.c",
    "porting/display/a064.c",
    "porting/indev/lv_port_indev.c",
    "porting/indev/platform/gpio_if.c",
    "porting/indev/platform/i2c_if.c",
    "src/core/lv_disp.c",
    "src/core/lv_event.c",
    "src/core/lv_group.c",
    "src/core/lv_indev.c",
    "src/core/lv_indev_scroll.c",
    "src/core/lv_obj.c",
    "src/core/lv_obj_class.c",
    "src/core/lv_obj_draw.c",
    "src/core/lv_obj_pos.c",
    "src/core/lv_obj_scroll.c",
    "src/core/lv_obj_style.c",
    "src/core/lv_obj_style_gen.c",
    "src/core/lv_obj_tree.c",
    "src/core/lv_refr.c",
    "src/core/lv_theme.c",
    "src/draw/lv_draw_arc.c",
    "src/draw/lv_draw_blend.c",
    "src/draw/lv_draw_img.c",
    "src/draw/lv_draw_label.c",
    "src/draw/lv_draw_line.c",
    "src/draw/lv_draw_mask.c",
    "src/draw/lv_draw_rect.c",
    "src/draw/lv_draw_triangle.c",
    "src/draw/lv_img_buf.c",
    "src/draw/lv_img_cache.c",
    "src/draw/lv_img_decoder.c",
    "src/extra/layouts/flex/lv_flex.c",
    "src/extra/layouts/grid/lv_grid.c",
    "src/extra/themes/basic/lv_theme_basic.c",
    "src/extra/themes/default/lv_theme_default.c",
    "src/extra/themes/mono/lv_theme_mono.c",
    "src/extra/widgets/animimg/lv_animimg.c",
    "src/extra/widgets/calendar/lv_calendar.c",
    "src/extra/widgets/calendar/lv_calendar_header_arrow.c",
    "src/extra/widgets/calendar/lv_calendar_header_dropdown.c",
    "src/extra/widgets/chart/lv_chart.c",
    "src/extra/widgets/colorwheel/lv_colorwheel.c",
    "src/extra/widgets/imgbtn/lv_imgbtn.c",
    "src/extra/widgets/keyboard/lv_keyboard.c",
    "src/extra/widgets/led/lv_led.c",
    "src/extra/widgets/list/lv_list.c",
    "src/extra/widgets/meter/lv_meter.c",
    "src/extra/widgets/msgbox/lv_msgbox.c",
    "src/extra/widgets/span/lv_span.c",
    "src/extra/widgets/spinbox/lv_spinbox.c",
    "src/extra/widgets/spinner/lv_spinner.c",
    "src/extra/widgets/tabview/lv_tabview.c",
    "src/extra/widgets/tileview/lv_tileview.c",
    "src/extra/widgets/lvwin_/lv_win_.c",
    "src/extra/lv_extra.c",
    "src/font/lv_font.c",
    "src/font/lv_font_dejavu_16_persian_hebrew.c",
    "src/font/lv_font_fmt_txt.c",
    "src/font/lv_font_loader.c",
    "src/font/lv_font_montserrat_8.c",
    "src/font/lv_font_montserrat_10.c",
    "src/font/lv_font_montserrat_12.c",
    "src/font/lv_font_montserrat_12_subpx.c",
    "src/font/lv_font_montserrat_14.c",
    "src/font/lv_font_montserrat_16.c",
    "src/font/lv_font_montserrat_18.c",
    "src/font/lv_font_montserrat_20.c",
    "src/font/lv_font_montserrat_22.c",
    "src/font/lv_font_montserrat_24.c",
    "src/font/lv_font_montserrat_26.c",
    "src/font/lv_font_montserrat_28.c",
    "src/font/lv_font_montserrat_28_compressed.c",
    "src/font/lv_font_montserrat_30.c",
    "src/font/lv_font_montserrat_32.c",
    "src/font/lv_font_montserrat_34.c",
    "src/font/lv_font_montserrat_36.c",
    "src/font/lv_font_montserrat_38.c",
    "src/font/lv_font_montserrat_40.c",
    "src/font/lv_font_montserrat_42.c",
    "src/font/lv_font_montserrat_44.c",
    "src/font/lv_font_montserrat_46.c",
    "src/font/lv_font_montserrat_48.c",
    "src/font/lv_font_simsun_16_cjk.c",
    "src/font/lv_font_unscii_16.c",
    "src/font/lv_font_unscii_8.c",
    "src/gpu/lv_gpu_nxp_pxp.c",
    "src/gpu/lv_gpu_nxp_pxp_osa.c",
    "src/gpu/lv_gpu_nxp_vglite.c",
    "src/gpu/lv_gpu_sdl.c",
    "src/gpu/lv_gpu_stm32_dma2d.c",
    "src/hal/lv_hal_disp.c",
    "src/hal/lv_hal_indev.c",
    "src/hal/lv_hal_tick.c",
    "src/misc/lv_anim.c",
    "src/misc/lv_anim_timeline.c",
    "src/misc/lv_area.c",
    "src/misc/lv_async.c",
    "src/misc/lv_bidi.c",
    "src/misc/lv_color.c",
    "src/misc/lv_fs.c",
    "src/misc/lv_gc.c",
    "src/misc/lv_ll.c",
    "src/misc/lv_log.c",
    "src/misc/lv_math.c",
    "src/misc/lv_mem.c",
    "src/misc/lv_printf.c",
    "src/misc/lv_style.c",
    "src/misc/lv_style_gen.c",
    "src/misc/lv_templ.c",
    "src/misc/lv_timer.c",
    "src/misc/lv_tlsf.c",
    "src/misc/lv_txt.c",
    "src/misc/lv_txt_ap.c",
    "src/misc/lv_utils.c",
    "src/widgets/lv_arc.c",
    "src/widgets/lv_bar.c",
    "src/widgets/lv_btn.c",
    "src/widgets/lv_btnmatrix.c",
    "src/widgets/lv_canvas.c",
    "src/widgets/lv_checkbox.c",
    "src/widgets/lv_dropdown.c",
    "src/widgets/lv_img.c",
    "src/widgets/lv_label.c",
    "src/widgets/lv_line.c",
    "src/widgets/lv_objx_templ.c",
    "src/widgets/lv_roller.c",
    "src/widgets/lv_slider.c",
    "src/widgets/lv_switch.c",
    "src/widgets/lv_table.c",
    "src/widgets/lv_textarea.c",
    "lv_demos/src/lv_demo_benchmark/lv_demo_benchmark.c",
    "lv_demos/src/lv_demo_benchmark/assets/img_benchmark_cogwheel_alpha16.c",
    "lv_demos/src/lv_demo_benchmark/assets/img_benchmark_cogwheel_argb.c",
    "lv_demos/src/lv_demo_benchmark/assets/img_benchmark_cogwheel_chroma_keyed.c",
    "lv_demos/src/lv_demo_benchmark/assets/img_benchmark_cogwheel_indexed16.c",
    "lv_demos/src/lv_demo_benchmark/assets/img_benchmark_cogwheel_rgb.c",
    "lv_demos/src/lv_demo_benchmark/assets/lv_font_bechmark_montserrat_12_compr_az.c.c",
    "lv_demos/src/lv_demo_benchmark/assets/lv_font_bechmark_montserrat_16_compr_az.c.c",
    "lv_demos/src/lv_demo_benchmark/assets/lv_font_bechmark_montserrat_28_compr_az.c.c",
    "lv_demos/src/lv_demo_widgets/lv_demo_widgets.c",
    "lv_demos/src/lv_demo_widgets/assets/img_clothes.c",
    "lv_demos/src/lv_demo_widgets/assets/img_demo_widgets_avatar.c",
    "lv_demos/src/lv_demo_widgets/assets/img_lvgl_logo.c",
  ]


  include_dirs = [
    "Inc",
    ".",
    "//kernel/liteos_m/kernel/include",
    "//kernel/liteos_m/utils",
    "//kernel/liteos_m/kernel/arch/include",
    "//device/bestechnic/${board_name}/components/drivers/touch/include",
    "//device/bestechnic/${board_name}/components/utils/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/display/hal",
    "//third_party/musl/porting/liteos_m/kernel/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//base/hiviewdfx/hilog/interfaces/native/kits/include",
    "v_demos",
    "porting/display",
    "porting/indev",
    "porting/indev/platform",
    "src",
    "touch",
  ]
}
