# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# build type definitions
is_phone = true
is_tv = false
is_watch = false

# hiview path definitions
hiview_root = "//base/hiviewdfx/hiview"
hiview_adapter = "//base/hiviewdfx/hiview/adapter"
hiview_base = "//base/hiviewdfx/hiview/base"
hiview_core = "//base/hiviewdfx/hiview/core"
hiview_plugin = "//base/hiviewdfx/hiview/plugins"
hiview_service = "//base/hiviewdfx/hiview/service"
hiview_test = "//base/hiviewdfx/hiview/test"

# hiview plugin path definitions
hiview_faultlogger = "//base/hiviewdfx/hiview/plugins/faultlogger"
hiview_eventlogger = "//base/hiviewdfx/hiview/plugins/eventlogger"
