# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/lite/config/component/lite_component.gni")
import("config.gni")

powermgr_path = "//base/powermgr/powermgr_lite"

powermgr_frameworks_path = "${powermgr_path}/frameworks"

powermgr_interfaces_path = "${powermgr_path}/interfaces"

powermgr_innerkits_path = "${powermgr_interfaces_path}/innerkits"

powermgr_kits_path = "${powermgr_interfaces_path}/kits"

powermgr_services_path = "${powermgr_path}/services"

powermgr_utils_path = "${powermgr_path}/utils"

declare_args() {
  is_liteos_m = false
  is_liteos_a = false
}

if (ohos_kernel_type == "liteos_m") {
  is_liteos_m = true
  lite_library_type = "static_library"
  system_type = "mini"
} else {
  is_liteos_a = true
  lite_library_type = "shared_library"
  system_type = "small"
}
