# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("testcase_packages") {
  testonly = true
  if (os_level == "standard") {
    deps = [
      "//base/security/appverify/interfaces/innerkits/appverify/test:unittest",
    ]
  } else {
    deps = [ "//base/security/appverify/interfaces/innerkits/appverify_lite/unittest:unittest" ]
  }
}

group("appverify_components") {
  if (os_level == "standard") {
    deps = [
      "//base/security/appverify/interfaces/innerkits/appverify:libhapverify",
      "//base/security/appverify/interfaces/innerkits/appverify/config:trusted_apps_sources",
      "//base/security/appverify/interfaces/innerkits/appverify/config:trusted_apps_sources_test",
      "//base/security/appverify/interfaces/innerkits/appverify/config:trusted_root_ca",
      "//base/security/appverify/interfaces/innerkits/appverify/config:trusted_root_ca_test",
      "//base/security/appverify/interfaces/innerkits/appverify/config:trusted_tickets_sources",
    ]
  } else {
    deps = [
      "//base/security/appverify/interfaces/innerkits/appverify_lite:verify",
    ]
  }
}
